# dimg-qml

./: .gitmodules  CMakeLists.txt  README.md  dimg_shims.cpp  item.cpp  item.h  main.cpp  main.qml
